# PRISM

./: .gitignore  README.md  pyproject.toml  setup.sh
docs/: EXPERIMENTS.md  ROADMAP.md
prism/: __init__.py
prism/adapters/: __init__.py  babyai_adapter.py  base.py  unity_2d.py
prism/agents/: __init__.py  grounded_agent.py  lang_goal_provider.py  pose_tracker.py
prism/cog_core/: __init__.py  concept_manager.py  concept_memory.py  counterfactual.py  curriculum.py  dev_curriculum.py  disentangled_concept_memory.py  factored_concept_memory.py  object_tracker.py  operator_bank.py  operator_bank_v2.py  operator_bank_v3.py  operator_memory.py  predicate_readout.py  world_model_rollout.py
prism/cognition/: __init__.py  memory_bank.py  policy.py  retrieval_block.py  tokenizer_base.py  tokens.py  trunk.py
prism/crafter/: __init__.py  cnn_encoder.py  env_worker.py  env_wrapper.py  (+4 more)
scripts/: check_rollout_fidelity.py  collect_agent_data.py  collect_bc_data.py  eval_agent_cohorts.py  eval_dynamics_predicates.py  eval_grounded_lang_agent.py  eval_jepa.py  eval_lang_policy_compositional.py  inspect_substrate_awareness.py  ppo_train.py  rl_finetune_policy.py  run_agent.py  run_benchmarks.py  run_concept_manager.py  run_heuristic_baseline.py  setup_hybrid.sh  smoke_test.py  train_jepa.py  train_ppo_baseline.py  train_predicate_probe.py  train_recurrent_policy.py
tests/: test_hybrid_components.py
unity_demo/: README.md  continual_finetune.py  ppo_train_unity.py  pretrain_concepts.py  prism_inference_server.py  prism_server.py  train_dynamics_unity.py  unity_nav_env.py
(+111 files in other folders)
