[project]
name = "prism"
version = "0.0.1"
description = "Tiny grounded predictive semantic system — JEPA + operators + consistency, started in BabyAI."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "PRISM" }]

# Note: torch is intentionally NOT listed here. Install it via setup.sh on the
# target machine so the correct CUDA wheel (cu126 / cu128 for RTX 5090) is used.
dependencies = [
    "minigrid>=2.3.1",
    "gymnasium>=0.29",
    "numpy>=1.26",
    "tqdm>=4.66",
    "tensorboard>=2.16",
    "rich>=13.7",
    "pyyaml>=6.0",
    "einops>=0.8",
]

[project.optional-dependencies]
baseline = [
    # PPO baseline reproduction. SB3 pulled in only when training.
    "stable-baselines3>=2.3",
]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prism"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]
